# AI-Chatbot-with-PDF--MAS-

./: .gitignore  main.py  pyproject.toml
backend/: .env.template  .gitignore  main.py  pyproject.toml
backend/mas_chat/agents/: agents.py  custom_agent_hooks.py
backend/mas_chat/agents/tools/: rag_tool.py
backend/mas_chat/router/v1/: mas.py
backend/mas_chat/schemas/: model.py
mas_template/agents/: agents.py
mas_template/agents/tools/: sample_tools.py
mas_template/configs/: environments.py
mas_template/schemas/: model.py
